[project]
name = "preconf-dash"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan K", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "mev-commit-sdk-py>=0.2.0",
    "ipykernel>=6.29.5",
    "dash>=2.17.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/preconf_dash"]
